# dokkument

./: .coverage  CLAUDE.md  README.md  coverage.xml  demo.py  example.dokk  example2.dokk  example3.dokk  name: CI  pyproject.toml
.github/workflows/: ci.yml  lint-test.yml
src/dokkument/: __init__.py  browser_opener.py  cli_display.py  cli_display_old.py  commands.py  config_manager.py  link_manager.py  main.py  parser.py
src/dokkument.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cli_display.py  test_link_manager.py  test_parser.py
